--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body class="body">
-  <h1 class="body__title">♥ Kierrez Zer My Mobia ♥</h1>
+  <h1 class="body__title">♥ Quieres ser mi novia?♥</h1>
   <img src="" alt="Aqui va tu foto pero no lo tengo ;(" class="body__img" />
   <br>
   <button id="yes">Si :)</button>
